# WarehouseApp

./: .gitignore  CMakeLists.txt  README.md  task.txt
src/: Menu.cpp
